# rust-doctor

./: .aiexclude  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LAUNCH-PLAN.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  action.yml  deny.toml  rustfmt.toml  server.json
.claude-plugin/: plugin.json
.cursor/rules/: rust-doctor.mdc
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
.meta/: best-practices-report.md
npm/: publish.sh
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
npm/rust-doctor/: install.js  package.json
npm/win32-x64/: package.json
rust-doctor-video/: package-lock.json  package.json
rust-doctor-video/src/: Composition.tsx  Root.tsx  SetupDemo.tsx
skills/rust-doctor/: SKILL.md
src/: audit.rs  cache.rs  cli.rs  clippy.rs  config.rs  coverage.rs  deny.rs  deps.rs  diagnostics.rs  diff.rs  discovery.rs  error.rs  fixer.rs  geiger.rs  lib.rs  machete.rs  main.rs  mcp.rs  msrv.rs  output.rs  plan.rs  process.rs  rules.rs  run.rs  sarif.rs  scan.rs  scanner.rs  semver_checks.rs  suppression.rs  workspace.rs
src/mcp/: handler.rs  helpers.rs  mod.rs  prompts.rs  rules.rs  tools.rs  types.rs
src/mcp/prompts/: deep_audit.md  health_check.md
src/output/: mod.rs  score.rs  terminal.rs
src/passes/: mod.rs
src/passes/quality/: machete.rs  mod.rs  msrv.rs  semver_checks.rs
src/passes/security/: audit.rs  deny.rs  geiger.rs  mod.rs
src/passes/static_analysis/: mod.rs
src/passes/static_analysis/clippy/: lint_registry.rs  mod.rs
src/passes/static_analysis/rules/: async_rules.rs  complexity.rs  error_handling.rs  framework.rs  mod.rs  performance.rs  security.rs
src/passes/static_analysis/rules/performance/: allocation.rs  clone.rs  collect_iterate.rs  large_enum.rs  mod.rs  string_literal.rs
src/rules/: async_rules.rs  error_handling.rs  framework.rs  mod.rs  performance.rs  security.rs
src/setup/: detect.rs  mcp_config.rs  mod.rs  skill.rs
src/setup/templates/: skill.md
tasks/: prd-best-practices-status.json  prd-best-practices.md  prd-rust-doctor-status.json  prd-rust-doctor.md
tests/: deadlock_regression.rs  integration.rs  snapshots.rs
tests/snapshots/: snapshots__all_categories.snap  snapshots__diagnostic_full.snap  snapshots__diagnostic_minimal.snap  snapshots__scan_result_empty.snap  snapshots__scan_result_with_findings.snap  snapshots__score_label_critical.snap  snapshots__score_label_great.snap  snapshots__score_label_needs_work.snap  snapshots__severity_error.snap  snapshots__severity_info.snap  snapshots__severity_warning.snap
website/: SEO-ROADMAP.md  eslint.config.mjs  next.config.mjs  next.config.ts  package-lock.json  package.json  source.config.ts  tsconfig.json
website/.source/: browser.ts  server.ts  source.config.mjs
website/content/blog/: hello-rust-doctor.mdx  what-rust-doctor-catches-that-clippy-misses.mdx
website/content/docs/: ci-cd.mdx  cli-reference.mdx  configuration.mdx  index.mdx  installation.mdx  mcp-server.mdx  meta.json  skill.mdx
website/content/docs/rules/: architecture.mdx  async.mdx  error-handling.mdx  framework.mdx  index.mdx  meta.json  performance.mdx  security.mdx
website/public/: llms.txt
website/src/app/: copy-block.tsx  copy-command.tsx  globals.css  layout.tsx  manifest.ts  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts  terminal.tsx  theme-toggle.tsx
website/src/app/_sections/: checks-section.tsx  faq-section.tsx  hero-section.tsx  install-section.tsx  mcp-section.tsx  rules-section.tsx  score-section.tsx  site-footer.tsx
website/src/app/blog/: layout.tsx  page.tsx
website/src/app/blog/[slug]/: page.tsx
website/src/app/docs/: layout.tsx
website/src/app/docs/[[...slug]]/: page.tsx
website/src/components/: site-header.tsx  terminal.tsx  theme-toggle.tsx
website/src/components/ui/: card.tsx  command.tsx  sidebar.tsx
website/src/lib/: data.ts  source.ts
