[package]
name = "rust-doctor"
version = "0.1.0"
edition = "2024"
description = "A unified code health tool for Rust — scan, score, and fix your codebase"
license = "MIT OR Apache-2.0"
repository = "https://github.com/anthropics/rust-doctor"
readme = "README.md"
keywords = ["lint", "clippy", "code-quality", "health", "diagnostics"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
cargo_metadata = "0.19"
clap = { version = "4.6", features = ["derive"] }
globset = "0.4"
indicatif = "0.18"
owo-colors = { version = "4", features = ["supports-colors"] }
rayon = "1.11"
proc-macro2 = { version = "1", features = ["span-locations"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2.0", features = ["full", "parsing", "visit"] }
toml = "1"
