[package]
name = "rust-doctor"
version = "0.1.10"
edition = "2024"
rust-version = "1.85"
description = "A unified code health tool for Rust — scan, score, and fix your codebase"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ArthurDEV44/rust-doctor"
readme = "README.md"
keywords = ["lint", "clippy", "code-quality", "health", "diagnostics"]
categories = ["development-tools", "command-line-utilities"]
exclude = ["npm/", ".claude-plugin/", ".claude/", ".meta/", "tasks/", "server.json", "website/", "rust-doctor-video/"]

[dependencies]
cargo_metadata = "0.19"
clap = { version = "4.6", features = ["derive"] }
globset = "0.4"
indicatif = "0.18"
owo-colors = { version = "4", features = ["supports-colors"] }
unicode-width = "0.2"
rayon = "1.11"
proc-macro2 = { version = "1", features = ["span-locations"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full", "parsing", "visit"] }
toml = "1"
thiserror = "2.0.18"
rmcp = { version = "1.2.0", features = ["server", "transport-io", "macros"], optional = true }
tokio = { version = "1.50.0", features = ["rt-multi-thread"], optional = true }
schemars = { version = "1", optional = true }

[features]
default = ["mcp"]
mcp = ["dep:rmcp", "dep:tokio", "dep:schemars"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"

[dev-dependencies]
insta = { version = "1.46.3", features = ["json"] }
tempfile = "3"
