[package]
name = "rust-doctor"
version = "0.1.20"
edition = "2024"
rust-version = "1.85"
description = "A unified code health tool for Rust — scan, score, and fix your codebase"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ArthurDEV44/rust-doctor"
homepage = "https://rust-doctor.vercel.app"
documentation = "https://docs.rs/rust-doctor"
readme = "README.md"
keywords = ["lint", "clippy", "code-quality", "health", "diagnostics"]
categories = ["development-tools", "command-line-utilities"]
exclude = ["npm/", ".claude-plugin/", ".claude/", ".meta/", "tasks/", "ULTRON/", "server.json", "rust-doctor-video/", "assets/"]

[dependencies]
cargo_metadata = "0.20"
clap = { version = "4.6", features = ["derive"] }
dialoguer = "0.11"
globset = "0.4"
indicatif = "0.18"
owo-colors = { version = "4", features = ["supports-colors"] }
unicode-width = "0.2"
rayon = "1.11"
proc-macro2 = { version = "1", features = ["span-locations"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full", "parsing", "visit"] }
toml = "1"
tempfile = "3"
thiserror = "2.0.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rmcp = { version = "1.2.0", features = ["server", "transport-io", "macros"], optional = true }
tokio = { version = "1.50.0", features = ["rt-multi-thread"], optional = true }
schemars = { version = "1", optional = true }

[features]
default = ["mcp"]
mcp = ["dep:rmcp", "dep:tokio", "dep:schemars"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
option_if_let_else = "allow"
significant_drop_tightening = "allow"
# Restriction lints — cherry-picked (never enable the whole restriction group).
# panic-like escapes are denied; unwrap/expect stay warn (see clippy #9222,
# tokio #3887). CI keeps unwrap/expect/todo as warnings, not hard errors.
panic = "deny"
unimplemented = "deny"
dbg_macro = "deny"
todo = "warn"
unwrap_used = "warn"
expect_used = "warn"
unwrap_in_result = "warn"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"

[dev-dependencies]
insta = { version = "1.46.3", features = ["json"] }
